<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Braille Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_braillenotes">Braille Notes</string>
    <string name="notes">Notes</string>
    <string name="compose">Compose</string>
    <string name="open">Open</string>
    <string name="turn_on_voice">Turn On Voice Assistant</string>
    <string name="turn_off_voice">Turn Off Voice Assistant</string>
    <string name="voice_is_on">Voice Assistant is On</string>
    <string name="voice_is_off">Voice Assistant is Off</string>
    <string name="save_braille">Accept name of file in Braille</string>
    <string name="save_key">Accept name of file from keys</string>
    <string name="save_method_is_key">File name will accepted from the keyboard</string>
    <string name="save_method_is_braille">File name will be accepted in Braille</string>
    <string name="going_back_main_menu">Going back to main menu</string>
    <string name="going_back">Going back</string>
    <string name="translated">Translated Text</string>
     <string name="dot">Dot</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="back">Back</string>
    <string name="modify">Modify Content</string>
    <string name="saveToSD">Save Content in File</string>
    <string name="folder">Braille Notes</string>
    <string name="no_files_saved">You have not saved any note</string>

    <color name="bgcolor">#383838</color>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="blue">#CCCCFF</color>
    <color name="green">#CCCCFF</color>

    <string name="title_activity_help">Help</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_compose">Note</string>
    <string name="title_activity_text">Note</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_list_notes">Manage Notes</string>

</resources>