<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    
      <Button
	        android:id="@+id/btnNotes"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:text="@string/notes"
	        android:textColor="@color/white"
	        android:textSize="30sp"
	        android:textStyle="bold"
	        android:layout_weight="1"
	        android:contentDescription="@string/notes"
	        android:background="@color/black"/>
	  <Button 
		    android:id="@+id/btnSettings"
		    android:textColor="@color/white"
		    android:textSize="30sp"
		    android:textStyle="bold"
		    android:text="@string/menu_settings"
		    android:layout_weight="1"
		    android:layout_width="match_parent"
		    android:contentDescription="@string/menu_settings"
		    android:layout_height="0dp" android:background="@color/black"/>
      <Button 
		    android:id="@+id/btnHelp"
		    android:text="@string/help"
			android:textColor="@color/white"
			android:textSize="30sp"
			android:textStyle="bold"    
		    android:layout_width="match_parent"
		    android:layout_height="0dp"
		    android:layout_weight="1"
		     android:contentDescription="@string/help"
		    android:background="@color/black"/>
</LinearLayout>
